--- a/web-src/examples/download-table.html
+++ b/web-src/examples/download-table.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript" src="../js/FileSaver.js"></script>
 <script type="text/javascript">
+/* global saveAs */
 
 const yearRingChart   = new dc.PieChart("#chart-ring-year"),
     spendHistChart  = new dc.BarChart("#chart-hist-spend"),
