--- a/web-src/examples/pie.html
+++ b/web-src/examples/pie.html
@@ -20,8 +20,10 @@
 const chart = new dc.PieChart("#test");
 d3.csv("morley.csv").then((experiments) => {
 
+    // TODO: better way to handle % in label
+    
   const ndx           = crossfilter(experiments),
-      runDimension  = ndx.dimension((d) => `run-${d.Run}`)
+      runDimension  = ndx.dimension((d) => `run-${d.Run}`),
       speedSumGroup = runDimension.group().reduceSum((d) => d.Speed * d.Run);
 
   chart
@@ -33,6 +35,7 @@ d3.csv("morley.csv").then((experiments) => {
     .group(speedSumGroup)
     .legend(dc.legend().highlightSelected(true))
     // workaround for #703: not enough data is accessible through .label() to display percentages
+      // eslint-disable-next-line no-shadow
     .on('pretransition', (chart) => {
         chart.selectAll('text.pie-slice').text((d) => `${d.data.key  } ${  dc.utils.printSingleValue((d.endAngle - d.startAngle) / (2*Math.PI) * 100)  }%`)
     });
