--- a/web-src/examples/scatter-canvas-brushing.html
+++ b/web-src/examples/scatter-canvas-brushing.html
@@ -28,7 +28,8 @@
 })
 
   // Calculate x and y binning with each bin being PIXEL_BIN_SIZE wide
-  const nXBins = 300; const nYBins = 300;
+  const nXBins = 300;
+  const nYBins = 300;
   const binWidth = 20 / nXBins;
 
   const ndx = crossfilter(rowData),
