--- a/web-src/examples/scatter-canvas-large.html
+++ b/web-src/examples/scatter-canvas-large.html
@@ -33,7 +33,8 @@ d.class = +d.class;
     // Binning coordinates into bins such that 1-2 bins per pixel makes
     // crossfilter operations more efficient, especially with large
     // datasets
-    const nXBins = 300; const nYBins = 300;
+    const nXBins = 300; 
+    const nYBins = 300;
     const binWidth = 20 / nXBins;
 
     const ndx = crossfilter(rowData),
