--- a/web-src/examples/background-drawing.html
+++ b/web-src/examples/background-drawing.html
@@ -26,7 +26,7 @@ Prec,Recall,System
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 //helper functions
-function safe_division(numerator, denominator){
+function safeDivision(numerator, denominator){
   if (!denominator) {  // Matches +0, -0, NaN
     return 0.0;
   }
@@ -40,7 +40,7 @@ function generateFmeasureContours(width, height, beta){
     for (let rec = 0; rec < width; ++rec, ++k) {
       const newPrec = prec/height;
       const newRec = rec/width;
-      values[k] = safe_division((1 + betasquared) * (newPrec * newRec), (betasquared * newPrec) + newRec);
+      values[k] = safeDivision((1 + betasquared) * (newPrec * newRec), (betasquared * newPrec) + newRec);
     }
   }
   const thresholds = d3.range(0.0, 1.0, 0.05);
@@ -70,7 +70,8 @@ chart
   .x(d3.scaleLinear().domain([0,1]))
   .yAxisLabel("Precision")
   .y(d3.scaleLinear().domain([0,1]))
-  .on('pretransition', (chart) => {
+    // eslint-disable-next-line no-shadow
+    .on('pretransition', (chart) => {
     // add contour layer to back (beginning of svg) only if it doesn't exist
     let contourLayer = chart.g().selectAll('g.contour-layer').data([0]);
     contourLayer = contourLayer
@@ -80,7 +81,7 @@ chart
         .merge(contourLayer);
 
     const width = chart.effectiveWidth(), height = chart.effectiveHeight();
-    [contours, color] = generateFmeasureContours(width,height, 1);
+    const [contours, color] = generateFmeasureContours(width,height, 1);
 
     contourLayer
       .selectAll("path")
