--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -57,7 +57,7 @@
     function splitkey(k) {
         return k.split('x');
     }
-    function stack_second(group) {
+    function stackSecond(group) {
         return {
             all: function() {
                 const all = group.all(),
@@ -77,11 +77,11 @@
     const ndx = crossfilter(experiments),
         runExptDim = ndx.dimension((d) => multikey(d.Run, d.Expt)),
         runExptGroup = runExptDim.group().reduceSum((d) => d.Speed),
-        stackedGroup = stack_second(runExptGroup);
+        stackedGroup = stackSecond(runExptGroup);
     const quantizeSpeed = d3.scaleQuantize().domain(d3.extent(experiments, (d) => d.Speed)).range(['lowest', 'low', 'medium', 'high', 'highest']);
     const quantizeSpeedDim = ndx.dimension((d) => quantizeSpeed(d.Speed)), quantizeSpeedGroup = quantizeSpeedDim.group();
 
-    function sel_stack(i) {
+    function selStack(i) {
         return function(d) {
             return d.value[i];
         };
@@ -99,12 +99,13 @@
             return `${d.key  }[${  this.name  }]: ${  d.value[this.name]}`;
         })
         .dimension(runExptDim)
-        .group(stackedGroup, "1", sel_stack('1'))
+        .group(stackedGroup, "1", selStack('1'))
         .renderLabel(true);
 
     for(let i = 2; i<6; ++i)
-        {chart.stack(stackedGroup, `${i}`, sel_stack(i));}
+        {chart.stack(stackedGroup, `${i}`, selStack(i));}
 
+        // eslint-disable-next-line no-shadow
     chart.on('pretransition', (chart) => {
   chart.selectAll('rect.bar')
       .classed('stack-deselected', (d) => {
