--- a/web-src/examples/focus-dynamic-interval.html
+++ b/web-src/examples/focus-dynamic-interval.html
@@ -32,7 +32,7 @@
             const items = 500000; // way way too much
 
             const start = Date.now();
-            for (i = 0; i < items; i++) {
+            for (let i = 0; i < items; i++) {
                 const t = start + i * 50;
                 const d = new Date(t);
                 data.push({
@@ -45,7 +45,7 @@
             const rangeChart = new dc.LineChart('#range-chart');
             const fullDomain = [data[0].date, data.slice(-1)[0].date];
             const dimension = crossfilter(data).dimension(d => d.date);
-            const groups_by_min_interval = [
+            const groupsByMinInterval = [
                 {
                     name: 'minutes',
                     threshold: 60 * 60 * 1000,
@@ -61,7 +61,7 @@
                 }
             ];
 
-            function make_group (interval) {
+            function makeGroup (interval) {
                 return dimension.group(interval).reduce(
                     (p, v) => {
                         p.count++;
@@ -77,13 +77,13 @@
                 );
             }
 
-            function choose_group (extent) {
+            function chooseGroup (extent) {
                 const d = extent[1].getTime() - extent[0].getTime();
-                const found = groups_by_min_interval.find(mg => mg.threshold < d);
+                const found = groupsByMinInterval.find(mg => mg.threshold < d);
                 console.log(`interval ${  d  } is more than ${  found.threshold  } ms; choosing ${  found.name 
             } for ${  found.interval.range(extent[0], extent[1]).length  } points`);
                 if (!found.group) {
-                    found.group = make_group(found.interval);
+                    found.group = makeGroup(found.interval);
                 }
                 return found.group;
             }
@@ -92,7 +92,7 @@
                 .width(800)
                 .height(300)
                 .dimension(dimension)
-                .group(choose_group(fullDomain))
+                .group(chooseGroup(fullDomain))
                 .yAxisPadding(0.1)
                 .valueAccessor(kv => kv.value.total / kv.value.count)
                 .rangeChart(rangeChart)
@@ -110,14 +110,14 @@
                 .width(800)
                 .height(100)
                 .dimension(dimension)
-                .group(groups_by_min_interval[0].group)
+                .group(groupsByMinInterval[0].group)
                 .yAxisPadding(1)
                 .valueAccessor(kv => kv.value.total / kv.value.count)
                 .x(d3.scaleTime().domain(fullDomain))
                 .xUnits(d3.timeDay);
 
             rangeChart.on('filtered.dynamic-interval', (_, filter) => {
-                chart.group(choose_group(filter || fullDomain));
+                chart.group(chooseGroup(filter || fullDomain));
             });
 
             chart.yAxis().tickFormat(t => t.toFixed(0));
