--- a/web-src/examples/scatter-brushing.html
+++ b/web-src/examples/scatter-brushing.html
@@ -22,7 +22,7 @@
 
 const chart1 = new dc.ScatterPlot("#test1");
 const chart2 = new dc.ScatterPlot("#test2");
-var data = "x,y,z\n" +
+const rawData = "x,y,z\n" +
     "1,1,3\n" +
     "5,2,11\n" +
     "13,13,13\n"+
@@ -33,7 +33,7 @@ var data = "x,y,z\n" +
     "8,6,14\n"+
     "1,4,9\n"+
     "8,8,12\n";
-var data = d3.csvParse(data);
+const data = d3.csvParse(rawData);
 
 data.forEach((x) => {
     x.x = +x.x;
