--- a/web-src/examples/switching-time-intervals.html
+++ b/web-src/examples/switching-time-intervals.html
@@ -37,7 +37,7 @@
       <script type="text/javascript" src="../js/dc.js"></script>
       <script type="text/javascript">
 
-        const find_query = function() {
+        const findQuery = function() {
             const _map = window.location.search.substr(1).split('&').map((a) => a.split('=')).reduce((p, v) => {
         if(v.length > 1)
             {p[v[0]] = decodeURIComponent(v[1].replace(/\+/g, " "));}
@@ -49,21 +49,21 @@
                 return _map[field] || null;
             };
         }();
-        const data = find_query('data') || 'monthly-move.csv',
-            date_col = find_query('date') || 'date',
-            val_col = find_query('val') || 'volume',
-            aggregate = find_query('aggregate') || 'average';
+        const data = findQuery('data') || 'monthly-move.csv';
+        const dateCol = findQuery('date') || 'date';
+        const valCol = findQuery('val') || 'volume';
+        const aggregate = findQuery('aggregate') || 'average';
 
         const chart = new dc.BarChart("#test"), counter = new dc.NumberDisplay('#counter');
         d3.csv(data).then((posts) => {
     posts.forEach((d) => {
-d[date_col] = new Date(d[date_col]);
-d[val_col] = +d[val_col];
+d[dateCol] = new Date(d[dateCol]);
+d[valCol] = +d[valCol];
     });
 
-    let ndx = crossfilter(posts),
-        dateDim = ndx.dimension((d) => d[date_col]),
-        postsGroup;
+          const ndx = crossfilter(posts);
+          const dateDim = ndx.dimension((d) => d[dateCol]);
+          let postsGroup;
 
     const intervals = {
         Days: d3.timeDay,
@@ -71,30 +71,30 @@ d[val_col] = +d[val_col];
         Months: d3.timeMonth,
         Years: d3.timeYear
     };
-    const defint = find_query('interval') || 'Weeks';
+    const defint = findQuery('interval') || 'Weeks';
     d3.select('#interval').selectAll('option')
         .data(Object.keys(intervals))
       .enter().append('option')
         .text((d) => d)
         .attr('selected', (d) => d === defint ? '' : null);
     function setup() {
-        const start_t = window.performance.now();
+        const startTime = window.performance.now();
         if(postsGroup)
             {postsGroup.dispose();}
-        const interval_name = d3.select('#interval').nodes()[0].value;
-        const interval = intervals[interval_name];
+        const intervalName = d3.select('#interval').nodes()[0].value;
+        const interval = intervals[intervalName];
         chart.xUnits(interval.range);
         postsGroup = dateDim
             .group((k) => interval(k))
             .reduce(
                 (p, v) => {
             ++p.count;
-            p.total += v[val_col];
+            p.total += v[valCol];
             return p;
         },
                 (p, v) => {
             --p.count;
-            p.total -= v[val_col];
+            p.total -= v[valCol];
             return p;
         },
                 () => ({
@@ -111,9 +111,9 @@ d[val_col] = +d[val_col];
             chart.valueAccessor((kv) => kv.value.total);
         }
         chart.dimension(dateDim).group(postsGroup)
-            .transitionDuration(!find_query('unsafe') && postsGroup.all().length > 2000 ? 0 : 1000)
+            .transitionDuration(!findQuery('unsafe') && postsGroup.all().length > 2000 ? 0 : 1000)
             .render();
-        console.log(['setup for', interval_name, 'took', window.performance.now() - start_t, 'ms'].join(' '));
+        console.log(['setup for', intervalName, 'took', window.performance.now() - startTime, 'ms'].join(' '));
     }
 
     chart
@@ -128,17 +128,18 @@ d[val_col] = +d[val_col];
 
     // this demonstrates solving elasticX manually, avoiding the
     // bug where the rightmost bar/box is not displayed, #792
-    function calc_domain(chart) {
-        let min = d3.min(chart.group().all(), (kv) => kv.key),
-            max = d3.max(chart.group().all(), (kv) => kv.key);
+          // eslint-disable-next-line no-shadow
+    function calcDomain(chart) {
+      const min = d3.min(chart.group().all(), (kv) => kv.key);
+      let max = d3.max(chart.group().all(), (kv) => kv.key);
         max = d3.timeMonth.offset(max, 1);
         chart.x().domain([min, max]);
     }
-    chart.on('preRender', calc_domain);
-    chart.on('preRedraw', calc_domain);
+    chart.on('preRender', calcDomain);
+    chart.on('preRedraw', calcDomain);
 
     const countAll = ndx.groupAll(),
-        groupAll = ndx.groupAll().reduceSum((d) => d[val_col]);
+        groupAll = ndx.groupAll().reduceSum((d) => d[valCol]);
     counter
         .dimension({})
         .group(groupAll);
